==> Bondzio/dots-on-a-map/sensornode/source/Micrium/Software/uC-Probe/Target/Communication/Generic/RS-232/Ports/NXP/LPC21xx/probe_rs232c.c <==
#include  <probe_com.h>
#include  <probe_rs232.h>
#define  U0_BASE                ((CPU_INT32U)0xE000C000)
#define  U1_BASE                ((CPU_INT32U)0xE0010000)
#define  VIC_BASE               ((CPU_INT32U)0xFFFFF000)
#define  PINSEL_BASE            ((CPU_INT32U)0xE002C000)
#define  VIC_UART0                      6
#define  VIC_UART1                      7
#define  U0RBR              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0000))
#define  U0THR              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0000))
#define  U0DLL              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0000))
#define  U0DLM              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0004))
#define  U0IER              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0004))
#define  U0IIR              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0008))
#define  U0FCR              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0008))
#define  U0LCR              (*(volatile CPU_INT08U *)(U0_BASE     + 0x000C))
#define  U0LSR              (*(volatile CPU_INT08U *)(U0_BASE     + 0x0014))
#define  U1RBR              (*(volatile CPU_INT08U *)(U1_BASE     + 0x0000))
#define  U1THR              (*(volatile CPU_INT08U *)(U1_BASE     + 0x0000))
#define  U1DLL              (*(volatile CPU_INT08U *)(U1_BASE     + 0x0000))
#define  U1DLM              (*(volatile CPU_INT08U *)(U1_BASE     + 0x0004))
#define  U1IER              (*(volatile CPU_INT08U *)(U1_BASE     + 0x0004))

void  ProbeRS232_InitTarget (CPU_INT32U baud_rate)
{
    CPU_INT16U  div;                                            /* Baud rate divisor                                        */
    CPU_INT08U  divlo;
    CPU_INT08U  divhi;
    CPU_INT32U  pinsel;
    CPU_INT32U  pclk_freq;


                                                                /* --------------- COMPUTE DIVISOR BAUD RATE -------------- */
    pclk_freq = BSP_CPU_PclkFreq();                             /* Get the CPU clock frequency                              */
    div       = (CPU_INT16U)(((2 * pclk_freq / 16 / baud_rate) + 1) / 2);
    divlo     =  div & 0x00FF;                                  /* Split divisor into LOW and HIGH bytes                    */
    divhi     = (div >> 8) & 0x00FF;

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
                                                                /* ------------------- ENABLE UART0 I/Os ------------------ */
                                                                /* (1) P0[0]  = Function 01b                                */
                                                                /* (2) P0[1]  = Function 01b                                */
    pinsel   = PINSEL0;
    pinsel  &= 0xFFFFFFF0;
    pinsel  |= 0x00000005;
    PINSEL0  = pinsel;

                                                                /* --------------------- SETUP UART0 ---------------------- */
    U0LCR    = DEF_BIT_07;                                      /* Set divisor access bit                                   */
    U0DLL    = divlo;                                           /* Load divisor                                             */
    U0DLM    = divhi;
    U0LCR    = 0x03;                                            /* 8 Bits, 1 Stop, No Parity                                */
    U0IER    = 0x00;                                            /* Disable both Rx and Tx interrupts                        */
    U0FCR    = DEF_BIT_00;                                      /* Enable FIFO, flush Rx & Tx                               */

                                                                /* --------------- INITIALIZE VIC FOR UART0 --------------- */
    VICIntSelect  &= ~(1 << VIC_UART0);                         /* Enable interrupts                                        */
    VICVectAddr15  = (CPU_INT32U)ProbeRS232_RxTxISRHandler;     /* Set the vector address                                   */
    VICVectCntl15  = 0x20 | VIC_UART0;                          /* Enable vectored interrupts                               */
    VICIntEnable   =  (1 << VIC_UART0);                         /* Enable Interrupts                                        */
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)

                                                                /* ------------------- ENABLE UART1 I/Os ------------------ */
                                                                /* (1) P0[8]  = Function 01b                                */
                                                                /* (2) P0[9]  = Function 01b                                */
    pinsel   = PINSEL0;
    pinsel  &= 0xFFF0FFFF;
    pinsel  |= 0x00050000;
    PINSEL0  = pinsel;

                                                                /* --------------------- SETUP UART1 ---------------------- */
    U1LCR    = DEF_BIT_07;                                      /* Set divisor access bit                                   */
    U1DLL    = divlo;                                           /* Load divisor                                             */
    U1DLM    = divhi;
    U1LCR    = 0x03;                                            /* 8 Bits, 1 Stop, No Parity                                */
    U1IER    = 0x00;                                            /* Disable both Rx and Tx interrupts                        */
    U1FCR    = DEF_BIT_00;                                      /* Enable FIFO, flush Rx & Tx                               */

                                                                /* --------------- INITIALIZE VIC FOR UART1 --------------- */
    VICIntSelect  &= ~(1 << VIC_UART1);                         /* Enable interrupts                                        */
    VICVectAddr15  = (CPU_INT32U)ProbeRS232_RxTxISRHandler;     /* Set the vector address                                   */
    VICVectCntl15  = 0x20 | VIC_UART1;                          /* Enable vectored interrupts                               */
    VICIntEnable   =  (1 << VIC_UART1);                         /* Enable Interrupts                                        */
#endif
}

void  ProbeRS232_RxTxISRHandler (void)
{
    volatile  CPU_INT08U  rx_data;
    volatile  CPU_INT08U  lsr;
    volatile  CPU_INT08U  iir;


#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    iir = U0IIR & 0x0F;
    while (iir != 1) {
        switch (iir) {
            case  2:                                            /* Transmitted character?                                   */
                 ProbeRS232_TxHandler();
                 break;

            case  4:                                            /* Received a character?                                    */
                 lsr     = U0LSR;
                 rx_data = U0RBR;
                 ProbeRS232_RxHandler(rx_data);                 /* Call the generic Rx handler                              */
                 break;

            default:
                 break;
        }
        iir = U0IIR & 0x0F;
    }
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    iir = U1IIR & 0x0F;
    while (iir != 1) {
        switch (iir) {
            case  2:                                            /* Transmitted character?                                   */
                 ProbeRS232_TxHandler();
                 break;

            case  4:                                            /* Received a character?                                    */
                 lsr     = U1LSR;
                 rx_data = U1RBR;
                 ProbeRS232_RxHandler(rx_data);                 /* Call the generic Rx handler                              */
                 break;

            default:
                 break;
        }
        iir = U1IIR & 0x0F;
    }
#endif

    VICVectAddr = 0x00000000L;                                  /* Clear the vector address register                        */
}

void  ProbeRS232_RxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER &= ~DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER &= ~DEF_BIT_00;
#endif
}

void  ProbeRS232_RxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER |= DEF_BIT_00;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER |= DEF_BIT_00;
#endif
}

void  ProbeRS232_Tx1 (CPU_INT08U c)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0THR = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1THR = c;
#endif
}

void  ProbeRS232_TxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER &= ~DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER &= ~DEF_BIT_01;
#endif
}

void  ProbeRS232_TxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    U0IER |= DEF_BIT_01;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    U1IER |= DEF_BIT_01;
#endif
}
