==> Bondzio/dots-on-a-map/sensornode/source/Micrium/Software/uC-Probe/Target/Communication/Generic/RS-232/Ports/Atmel/AT91SAM7SE/probe_rs232c.c <==
#include  <probe_com.h>
#include  <probe_rs232.h>
#define  US0_BASE               ((CPU_INT32U)0xFFFC0000)
#define  US1_BASE               ((CPU_INT32U)0xFFFC4000)
#define  DBGU_BASE              ((CPU_INT32U)0xFFFFF200)
#define  AIC_BASE               ((CPU_INT32U)0xFFFFF000)
#define  PIOA_BASE              ((CPU_INT32U)0xFFFFF400)
#define  PMC_BASE               ((CPU_INT32U)0xFFFFFC00)
#define  AT91C_ID_SYS                   1
#define  AT91C_ID_US0                   6
#define  AT91C_ID_US1                   7
#define  US0_CR             (*(volatile CPU_INT32U *)(US0_BASE  + 0x0000))
#define  US0_MR             (*(volatile CPU_INT32U *)(US0_BASE  + 0x0004))
#define  US0_IER            (*(volatile CPU_INT32U *)(US0_BASE  + 0x0008))
#define  US0_IDR            (*(volatile CPU_INT32U *)(US0_BASE  + 0x000C))
#define  US0_CSR            (*(volatile CPU_INT32U *)(US0_BASE  + 0x0014))
#define  US0_RHR            (*(volatile CPU_INT32U *)(US0_BASE  + 0x0018))
#define  US0_THR            (*(volatile CPU_INT32U *)(US0_BASE  + 0x001C))
#define  US0_BRGR           (*(volatile CPU_INT32U *)(US0_BASE  + 0x0020))
#define  US1_CR             (*(volatile CPU_INT32U *)(US1_BASE  + 0x0000))
#define  US1_MR             (*(volatile CPU_INT32U *)(US1_BASE  + 0x0004))
#define  US1_IER            (*(volatile CPU_INT32U *)(US1_BASE  + 0x0008))
#define  US1_IDR            (*(volatile CPU_INT32U *)(US1_BASE  + 0x000C))
#define  US1_CSR            (*(volatile CPU_INT32U *)(US1_BASE  + 0x0014))

void  ProbeRS232_InitTarget (CPU_INT32U baud_rate)
{
    CPU_INT32U     pclk_freq;


    pclk_freq               = BSP_CPU_ClkFreq();                /* Calculate PCLK frequency                                 */

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
                                                                /* Set GPIOA pins 5, 6, 7, & 8 as US0 pins                  */
    PIOA_PDR              = DEF_BIT_05 | DEF_BIT_06 | DEF_BIT_07 | DEF_BIT_08;
    PIOA_ASR              = DEF_BIT_05 | DEF_BIT_06 | DEF_BIT_07 | DEF_BIT_08;

                                                                /* ---------------------- SETUP US0 ----------------------- */
    US0_IDR               = AT91C_US_RXRDY | AT91C_US_TXRDY;    /* Disable Rx & Tx interrupts                               */
    US0_CR                = AT91C_US_RXEN  | AT91C_US_TXEN;     /* Enable the receiver & transmitter                        */

    US0_MR                = AT91C_US_USMODE_NORMAL              /* RS232C mode selected                                     */
                          | AT91C_US_CLKS_CLOCK                 /* USART input CLK is MCK                                   */
                          | AT91C_US_CHRL_8_BITS                /* 8 bit data to be sent                                    */
                          | AT91C_US_PAR_NONE                   /* No parity bit selected                                   */
                          | AT91C_US_NBSTOP_1_BIT;              /* 1 stop bit selected                                      */

                                                                /* Set the USART baud rate                                  */
    US0_BRGR              = (CPU_INT16U)((pclk_freq) / baud_rate / 16);

                                                                /* ---------------- INITIALIZE AIC FOR US0 ---------------- */
    AIC_SVR(AT91C_ID_US0) = (CPU_INT32U)ProbeRS232_RxTxISRHandler;
    AIC_SMR(AT91C_ID_US0) = AT91C_AIC_SRCTYPE_EXT_HIGH_LEVEL | AT91C_AIC_PRIOR_LOWEST;
    AIC_ICCR              = (1 << AT91C_ID_US0);
    AIC_IECR              = (1 << AT91C_ID_US0);

    PMC_PCER              = (1 << AT91C_ID_US0);              /* Enable the US0 peripheral clock                            */
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
                                                                /* Set GPIOA pins 21 & 22 as US1 pins                       */
    PIOA_PDR              = DEF_BIT_21 | DEF_BIT_22;
    PIOA_ASR              = DEF_BIT_21 | DEF_BIT_22;

                                                                /* ---------------------- SETUP US1 ----------------------- */
    US1_IDR               = AT91C_US_RXRDY | AT91C_US_TXRDY;    /* Disable Rx & Tx interrupts                               */
    US1_CR                = AT91C_US_RXEN  | AT91C_US_TXEN;     /* Enable the receiver & transmitter                        */

    US1_MR                = AT91C_US_USMODE_NORMAL              /* RS232C mode selected                                     */
                          | AT91C_US_CLKS_CLOCK                 /* USART input CLK is MCK                                   */
                          | AT91C_US_CHRL_8_BITS                /* 8 bit data to be sent                                    */
                          | AT91C_US_PAR_NONE                   /* No parity bit selected                                   */
                          | AT91C_US_NBSTOP_1_BIT;              /* 1 stop bit selected                                      */

                                                                /* Set the USART baud rate                                  */
    US1_BRGR              = (CPU_INT16U)((pclk_freq) / baud_rate / 16);

                                                                /* ---------------- INITIALIZE AIC FOR US1 ---------------- */
    AIC_SVR(AT91C_ID_US1) = (CPU_INT32U)ProbeRS232_RxTxISRHandler;
    AIC_SMR(AT91C_ID_US1) = AT91C_AIC_SRCTYPE_EXT_HIGH_LEVEL | AT91C_AIC_PRIOR_LOWEST;
    AIC_ICCR              = (1 << AT91C_ID_US1);
    AIC_IECR              = (1 << AT91C_ID_US1);

    PMC_PCER              = (1 << AT91C_ID_US1);              /* Enable the US1 peripheral clock                            */
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_DBG)
                                                                /* ----------------- CONFIGURE DBGU I/Os ------------------ */
                                                                /* Set GPIOA pins 9 & 10 as DBGU pins                       */
    PIOA_PDR  = DEF_BIT_09 | DEF_BIT_10;
    PIOA_ASR  = DEF_BIT_09 | DEF_BIT_10;

                                                                /* --------------------- SETUP DBGU ----------------------- */
    DBGU_IDR  = AT91C_US_RXRDY | AT91C_US_TXRDY;                /* Disable Rx & Tx interrupts                               */
    DBGU_CR   = AT91C_US_RXEN  | AT91C_US_TXEN;                 /* Enable the receiver & transmitter                        */

    DBGU_MR   = AT91C_US_USMODE_NORMAL                          /* RS232C mode selected                                     */
              | AT91C_US_CLKS_CLOCK                             /* USART input CLK is MCK                                   */
              | AT91C_US_CHRL_8_BITS                            /* 8 bit data to be sent                                    */
              | AT91C_US_PAR_NONE                               /* No parity bit selected                                   */
              | AT91C_US_NBSTOP_1_BIT;                          /* 1 stop bit selected                                      */

                                                                /* Set the USART baud rate                                  */
    DBGU_BRGR = (CPU_INT16U)((pclk_freq) / baud_rate / 16);

                                                                /* --------------- INITIALIZE AIC FOR DBGU ---------------- */
                                                                /* See Note (1)                                             */
    PMC_PCER  = (1 << AT91C_ID_SYS);                            /* Enable the DBGU peripheral clock                         */
#endif
}

void  ProbeRS232_RxTxISRHandler (void)
{
    CPU_INT08U  rx_data;


#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    AIC_IVR   = 0;                                              /* Debug variant of IVR (protect mode is used)              */

                                                                /* If we received a byte                                    */
    if ((US0_CSR & AT91C_US_RXRDY) == AT91C_US_RXRDY) {
        rx_data = (CPU_INT08U)(US0_RHR & 0x00FF);               /* Remove the data from the holding register                */
        ProbeRS232_RxHandler(rx_data);                          /* Call the generic Rx handler                              */
    }

                                                                /* If we completed transmitting a byte                      */
    if ((US0_CSR & AT91C_US_TXRDY) == AT91C_US_TXRDY) {
        ProbeRS232_TxHandler();                                 /* Call the generic Tx handler                              */
    }

    if ((US0_CSR  & AT91C_US_OVRE) == AT91C_US_OVRE) {
        US0_CR = AT91C_US_RSTSTA;                               /* If an overrun occurs, reset the OR flag                  */
    }

    AIC_ICCR  = AT91C_ID_US0;                                   /* Clear  US0 interrupt                                     */
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    AIC_IVR   = 0;                                              /* Debug variant of IVR (protect mode is used)              */
                                                                /* If we received a byte                                    */
    if ((US1_CSR & AT91C_US_RXRDY) == AT91C_US_RXRDY) {
        rx_data = (CPU_INT08U)(US1_RHR & 0x00FF);               /* Remove the data from the holding register                */
        ProbeRS232_RxHandler(rx_data);                          /* Call the generic Rx handler                              */
    }

                                                                /* If we completed transmitting a byte                      */
    if ((US1_CSR & AT91C_US_TXRDY) == AT91C_US_TXRDY) {
        ProbeRS232_TxHandler();                                 /* Call the generic Tx handler                              */
    }

    if ((US0_CSR  & AT91C_US_OVRE) == AT91C_US_OVRE) {
        US1_CR = AT91C_US_RSTSTA;                               /* If an overrun occurs, reset the OR flag                  */
    }

    AIC_ICCR  = AT91C_ID_US1;                                   /* Clear  US0 interrupt                                     */
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_DBG)
                                                                /* If we received a byte                                    */
    if ((DBGU_CSR & AT91C_US_RXRDY) == AT91C_US_RXRDY) {
        rx_data = (CPU_INT08U)(DBGU_RHR & 0x00FF);              /* Remove the data from the holding register                */
        ProbeRS232_RxHandler(rx_data);                          /* Call the generic Rx handler                              */
    }

                                                                /* If we completed transmitting a byte                      */
    if ((DBGU_CSR & AT91C_US_TXRDY) == AT91C_US_TXRDY) {
        ProbeRS232_TxHandler();                                 /* Call the generic Tx handler                              */
    }

    if ((DBGU_CSR  & AT91C_US_OVRE) == AT91C_US_OVRE) {
        DBGU_CR = AT91C_US_RSTSTA;                              /* If an overrun occurs, reset the OR flag                  */
    }
#endif
}

void  ProbeRS232_RxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    US0_IDR  = AT91C_US_RXRDY;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    US1_IDR  = AT91C_US_RXRDY;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_DBG)
    DBGU_IDR = AT91C_US_RXRDY;
#endif
}

void  ProbeRS232_RxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    US0_IER  = AT91C_US_RXRDY;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    US1_IER  = AT91C_US_RXRDY;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_DBG)
    DBGU_IER = AT91C_US_RXRDY;
#endif
}

void  ProbeRS232_Tx1 (CPU_INT08U c)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    US0_THR  = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    US1_THR  = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_DBG)
    DBGU_THR = c;
#endif
}

void  ProbeRS232_TxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    US0_IDR  = AT91C_US_TXRDY;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    US1_IDR  = AT91C_US_TXRDY;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_DBG)
    DBGU_IDR = AT91C_US_TXRDY;
#endif
}

void  ProbeRS232_TxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    US0_IER  = AT91C_US_TXRDY;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    US1_IER  = AT91C_US_TXRDY;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_DBG)
    DBGU_IER = AT91C_US_TXRDY;
#endif
}
